# c2023-a

./: .gitignore  CMakeLists.txt  vcpkg.json
gobang/: GOBANG.c  click.c  evaluate.c  judge.c  search.h  五子棋ai设计实验报告.docx
level0/Bubble/: bubble.c
level0/Queue/: copy.c  copy_2.c  queue.c
level0/choice/: choose.c
level0/excise/: bubble_for_try.c  link.c  prime.c
level0/gobang/: CMakeLists.txt  GOBANG.c  evaluate.h  judge.h  search.c
level0/stack/: copy_2.c  practice.c  stack.c  stack.h  stack_copy.c
level0/take_part_in/: part.c
level1/: CMakeLists.txt
level1/p01_running_letter/: main.c
level1/p02_is_prime/: is_prime.c  is_prime.h  main.c
level1/p03_all_primes/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c
level1/p07_maze/: main.c
level1/p08_push_boxes/: main.c  main.h  map.c  map.h  stop.h
level1/p09_linked_list/: main.c
level1/p10_warehouse/: main.c  menu.c  menu.h
